# prasaarit-upload-service

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  old.py  pyproject.toml
api/: openapi.yaml
iac/bootstrap/: config.tf  main.tf
iac/resources/: api_gw.tf  cloudwatch.tf  iam_role.tf  lambda_function.tf  main.tf  terraform.tfvars  variables.tf
src/: app.py  generate_specs.py  main.py
src/api/: api.py  base_model.py
src/api/endpoints/: multipart_uploads.py  s3_presigned_url.py
src/api/models/: multipart_upload.py  s3_presigned_url.py
src/controllers/: generate_presigned_url.py  multi_part_upload.py
src/services/: s3_services.py
src/utils/: constants.py  logger.py  s3.py
