[project]
name = "prasaarit-upload-service"
version = "0.1.0"
description = "Upload service for prasaarit"
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["aws-lambda-powertools>=3.26.0"]

[dependency-groups]
dev = [
    "boto3>=1.42.73",
    "boto3-stubs[s3]>=1.42.73",
    "types-boto3[essential]>=1.42.73",
]
